--- a/iot.ui
+++ b/iot.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>973</width>
+    <width>983</width>
     <height>608</height>
    </rect>
   </property>
@@ -413,11 +413,11 @@ background-color: rgb(84,153,199);
 	background-color: white;
     border: 2px solid #a7da46;
     border-radius:10px;
-	color: rgb(0, 170, 0);
+	color: rgb(250, 0, 0);
 }</string>
                 </property>
                 <property name="text">
-                 <string>Đang kết nối</string>
+                 <string>Ngắt kết nối</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -449,11 +449,11 @@ background-color: rgb(84,153,199);
 	background-color: white;
     border: 2px solid #a7da46;
     border-radius:10px;
-	color: rgb(0, 170, 0);
+	color: rgb(250, 0, 0);
 }</string>
                 </property>
                 <property name="text">
-                 <string>Đang kết nối</string>
+                 <string>Ngắt kết nối</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -555,11 +555,11 @@ QPushButton:hover{
 	background-color: white;
     border: 2px solid #a7da46;
     border-radius:10px;
-	color: rgb(0, 170, 0);
+	color: rgb(250, 0, 0);
 }</string>
                 </property>
                 <property name="text">
-                 <string>Đang kết nối</string>
+                 <string>Ngắt kết nối</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -877,11 +877,11 @@ QPushButton:hover{
 	background-color: white;
     border: 2px solid #a7da46;
     border-radius:10px;
-	color: rgb(0, 170, 0);
+	color: rgb(250, 0, 0);
 }</string>
                 </property>
                 <property name="text">
-                 <string>Đang kết nối</string>
+                 <string>Ngắt kết nối</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -948,11 +948,11 @@ QPushButton:hover{
 	background-color: white;
     border: 2px solid #a7da46;
     border-radius:10px;
-	color: rgb(0, 170, 0);
+	color: rgb(250, 0, 0);
 }</string>
                 </property>
                 <property name="text">
-                 <string>Đang kết nối</string>
+                 <string>Ngắt kết nối</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -984,11 +984,11 @@ QPushButton:hover{
 	background-color: white;
     border: 2px solid #a7da46;
     border-radius:10px;
-	color: rgb(0, 170, 0);
+	color: rgb(250, 0, 0);
 }</string>
                 </property>
                 <property name="text">
-                 <string>Đang kết nối</string>
+                 <string>Ngắt kết nối</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -1020,11 +1020,11 @@ QPushButton:hover{
 	background-color: white;
     border: 2px solid #a7da46;
     border-radius:10px;
-	color: rgb(0, 170, 0);
+	color: rgb(250, 0, 0);
 }</string>
                 </property>
                 <property name="text">
-                 <string>Đang kết nối</string>
+                 <string>Ngắt kết nối</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -1091,11 +1091,11 @@ QPushButton:hover{
 	background-color: white;
     border: 2px solid #a7da46;
     border-radius:10px;
-	color: rgb(0, 170, 0);
+	color: rgb(250, 0, 0);
 }</string>
                 </property>
                 <property name="text">
-                 <string>Đang kết nối</string>
+                 <string>Ngắt kết nối</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -1232,11 +1232,11 @@ QPushButton:hover{
 	background-color: white;
     border: 2px solid #a7da46;
     border-radius:10px;
-	color: rgb(0, 170, 0);
+	color: rgb(250, 0, 0);
 }</string>
                 </property>
                 <property name="text">
-                 <string>Đang kết nối</string>
+                 <string>Ngắt kết nối</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
