--- a/iot.ui
+++ b/iot.ui
@@ -594,7 +594,7 @@ QPushButton:hover{
 }</string>
                 </property>
                 <property name="text">
-                 <string>-1</string>
+                 <string>0</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -662,7 +662,7 @@ QPushButton:hover{
 }</string>
                 </property>
                 <property name="text">
-                 <string>-1</string>
+                 <string>0</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -697,7 +697,7 @@ QPushButton:hover{
 }</string>
                 </property>
                 <property name="text">
-                 <string>-1</string>
+                 <string>0</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -916,7 +916,7 @@ QPushButton:hover{
 }</string>
                 </property>
                 <property name="text">
-                 <string>-1</string>
+                 <string>0</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -1059,7 +1059,7 @@ QPushButton:hover{
 }</string>
                 </property>
                 <property name="text">
-                 <string>-1</string>
+                 <string>0</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -1167,7 +1167,7 @@ QPushButton:hover{
 }</string>
                 </property>
                 <property name="text">
-                 <string>-1</string>
+                 <string>0</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -1271,7 +1271,7 @@ QPushButton:hover{
 }</string>
                 </property>
                 <property name="text">
-                 <string>-1</string>
+                 <string>0</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -1306,7 +1306,7 @@ QPushButton:hover{
 }</string>
                 </property>
                 <property name="text">
-                 <string>-1</string>
+                 <string>0</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -1341,7 +1341,7 @@ QPushButton:hover{
 }</string>
                 </property>
                 <property name="text">
-                 <string>-1</string>
+                 <string>0</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -3185,6 +3185,9 @@ QPushButton:hover{
            <width>32</width>
            <height>32</height>
           </size>
+         </property>
+         <property name="checkable">
+          <bool>false</bool>
          </property>
         </widget>
        </item>
