--- a/assets.qrc
+++ b/assets.qrc
@@ -3,6 +3,6 @@
     <file>pause.svg</file>
     <file>play.svg</file>
     <file>power-on.svg</file>
-    <file>logo.png</file>
+    <file>logo.jpg</file>
   </qresource>
 </RCC>
