--- a/iot.ui
+++ b/iot.ui
@@ -81,7 +81,7 @@
           <string/>
          </property>
          <property name="pixmap">
-          <pixmap resource="assets.qrc">:/img/logo.png</pixmap>
+          <pixmap resource="assets.qrc">:/img/logo.jpg</pixmap>
          </property>
          <property name="scaledContents">
           <bool>true</bool>
@@ -102,7 +102,7 @@
           <string notr="true">color: rgb(0, 0, 255);</string>
          </property>
          <property name="text">
-          <string>HỆ THỐNG DEMO IoT</string>
+          <string>THIẾT BỊ ĐO CÁC ĐẠI LƯỢNG KHÔNG ĐIỆN</string>
          </property>
          <property name="scaledContents">
           <bool>true</bool>
