--- a/iot.ui
+++ b/iot.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1042</width>
-    <height>818</height>
+    <height>742</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -3320,7 +3320,7 @@ border:none;
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout_4">
        <property name="spacing">
-        <number>20</number>
+        <number>10</number>
        </property>
        <property name="leftMargin">
         <number>0</number>
@@ -3367,7 +3367,7 @@ border:none;
         <widget class="QPushButton" name="btn_off">
          <property name="minimumSize">
           <size>
-           <width>120</width>
+           <width>100</width>
            <height>40</height>
           </size>
          </property>
@@ -3393,7 +3393,7 @@ QPushButton:hover{
 }</string>
          </property>
          <property name="text">
-          <string>Tắt máy</string>
+          <string/>
          </property>
          <property name="icon">
           <iconset resource="assets.qrc">
@@ -3411,7 +3411,7 @@ QPushButton:hover{
         <widget class="QPushButton" name="btn_run">
          <property name="minimumSize">
           <size>
-           <width>120</width>
+           <width>100</width>
            <height>40</height>
           </size>
          </property>
@@ -3437,7 +3437,7 @@ QPushButton:hover{
 }</string>
          </property>
          <property name="text">
-          <string>Chạy</string>
+          <string/>
          </property>
          <property name="icon">
           <iconset resource="assets.qrc">
@@ -3457,7 +3457,7 @@ QPushButton:hover{
        <item>
         <widget class="QFrame" name="frameInternet">
          <property name="toolTip">
-          <string>Mất kết nối internet</string>
+          <string notr="true">Mất kết nối internet</string>
          </property>
          <property name="toolTipDuration">
           <number>0</number>
@@ -3485,27 +3485,16 @@ QPushButton:hover{
            <widget class="QLabel" name="lb_internet">
             <property name="minimumSize">
              <size>
-              <width>16</width>
-              <height>16</height>
+              <width>32</width>
+              <height>32</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
-              <width>16</width>
-              <height>16</height>
+              <width>32</width>
+              <height>32</height>
              </size>
             </property>
-            <property name="styleSheet">
-             <string notr="true">background-color: rgb(255, 0, 0);
-border-radius:8px;</string>
-            </property>
-            <property name="text">
-             <string/>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QLabel" name="label_7">
             <property name="font">
              <font>
               <family>Times New Roman</family>
@@ -3516,7 +3505,115 @@ border-radius:8px;</string>
              <string notr="true"/>
             </property>
             <property name="text">
-             <string>Internet</string>
+             <string/>
+            </property>
+            <property name="pixmap">
+             <pixmap resource="assets.qrc">:/img/network_lost.svg</pixmap>
+            </property>
+            <property name="scaledContents">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item>
+        <widget class="QFrame" name="frame_7">
+         <property name="frameShape">
+          <enum>QFrame::StyledPanel</enum>
+         </property>
+         <property name="frameShadow">
+          <enum>QFrame::Raised</enum>
+         </property>
+         <layout class="QHBoxLayout" name="horizontalLayout_17">
+          <property name="spacing">
+           <number>0</number>
+          </property>
+          <property name="leftMargin">
+           <number>0</number>
+          </property>
+          <property name="topMargin">
+           <number>0</number>
+          </property>
+          <property name="rightMargin">
+           <number>0</number>
+          </property>
+          <property name="bottomMargin">
+           <number>0</number>
+          </property>
+          <item>
+           <widget class="QLabel" name="lb_charge">
+            <property name="minimumSize">
+             <size>
+              <width>24</width>
+              <height>24</height>
+             </size>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>24</width>
+              <height>24</height>
+             </size>
+            </property>
+            <property name="text">
+             <string/>
+            </property>
+            <property name="pixmap">
+             <pixmap resource="assets.qrc">:/img/thunder.svg</pixmap>
+            </property>
+            <property name="scaledContents">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QProgressBar" name="battery_percent">
+            <property name="maximumSize">
+             <size>
+              <width>40</width>
+              <height>24</height>
+             </size>
+            </property>
+            <property name="font">
+             <font>
+              <family>Times New Roman</family>
+              <kerning>true</kerning>
+             </font>
+            </property>
+            <property name="styleSheet">
+             <string notr="true">border: 1px solid gray;</string>
+            </property>
+            <property name="value">
+             <number>100</number>
+            </property>
+            <property name="alignment">
+             <set>Qt::AlignCenter</set>
+            </property>
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QLabel" name="label_2">
+            <property name="minimumSize">
+             <size>
+              <width>4</width>
+              <height>8</height>
+             </size>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>4</width>
+              <height>8</height>
+             </size>
+            </property>
+            <property name="styleSheet">
+             <string notr="true">background-color:gray;</string>
+            </property>
+            <property name="text">
+             <string/>
             </property>
            </widget>
           </item>
@@ -3535,7 +3632,10 @@ border-radius:8px;</string>
           <string notr="true"/>
          </property>
          <property name="text">
-          <string>16/03/2022 13:35:30</string>
+          <string>16/03/2022 13:35</string>
+         </property>
+         <property name="textFormat">
+          <enum>Qt::AutoText</enum>
          </property>
         </widget>
        </item>
