--- a/iot.ui
+++ b/iot.ui
@@ -3506,6 +3506,12 @@ background-color:#ffe5c4;
    border:1px solid gray
 }</string>
                  </property>
+                 <property name="editTriggers">
+                  <set>QAbstractItemView::NoEditTriggers</set>
+                 </property>
+                 <property name="selectionBehavior">
+                  <enum>QAbstractItemView::SelectRows</enum>
+                 </property>
                  <attribute name="horizontalHeaderStretchLastSection">
                   <bool>true</bool>
                  </attribute>
@@ -3525,7 +3531,7 @@ background-color:#ffe5c4;
                  </column>
                  <column>
                   <property name="text">
-                   <string>Cường độ</string>
+                   <string>Cường độ  tín hiệu</string>
                   </property>
                   <property name="font">
                    <font>
