--- a/iot.ui
+++ b/iot.ui
@@ -3509,6 +3509,9 @@ background-color:#ffe5c4;
                  <property name="editTriggers">
                   <set>QAbstractItemView::NoEditTriggers</set>
                  </property>
+                 <property name="dragDropOverwriteMode">
+                  <bool>true</bool>
+                 </property>
                  <property name="selectionBehavior">
                   <enum>QAbstractItemView::SelectRows</enum>
                  </property>
